홀그리기 테스트

--- a/todo.txt
+++ b/todo.txt
@@ -4,5 +4,9 @@ ok Zoom
 ok DrawFrame
 ok DrawPixel
 ok GDI 표시 옵션 처리
+
 이미지 로드 bw bh안맞아도 로드 되게
 라이브러리 화
+
+ok 홀그리기 테스트
+홀버퍼 native에 생성하고 native gdi로 그릴것
