쿼드트리 준비

--- a/todo.txt
+++ b/todo.txt
@@ -5,8 +5,21 @@ ok DrawFrame
 ok DrawPixel
 ok GDI 표시 옵션 처리
 
+전체 포워드 이미지 로딩 기능
 이미지 로드 bw bh안맞아도 로드 되게
 라이브러리 화
 
 ok 홀그리기 테스트
-홀버퍼 native에 생성하고 native gdi로 그릴것
+ok 홀버퍼 native에 생성하고 native gdi로 그릴것
+  -> 해봤는데 성능향상이 미미함
+  -> 그래서 테스트 해보고 코드 삭제
+
+홀버퍼 쿼드트리 자료구조 화
+1. minxy maxxy를 구함
+2. 트리 깊이 설정
+3. 트리 생성
+4. 트리생성시 Data에는 RectangleF, List<Hole> 포함
+5. 홀 배열 순회하면서 트리 리프 노드에 추가
+6. 디스플레이시
+  디스플레이 영역 이미지 좌표로 변환
+  트리를 순회 하면서 이미지 영역에 포함되는지
