--- a/todo.txt
+++ b/todo.txt
@@ -4,9 +4,11 @@ ok Zoom
 ok DrawFrame
 ok DrawPixel
 ok GDI 표시 옵션 처리
-
-전체 포워드 이미지 로딩 기능
-이미지 로드 bw bh안맞아도 로드 되게
+ok BmpLoader : OpenCV 지우고 C코드만 남길것
+ok CopyImageBufferZoom : Unsafe 지우고 C코드만 남길것
+CopyImageBufferZoom Dst범위 계산해서 범위만 루프 돌것
+전체 서페이스 (모든 포워드) 이미지 로딩 기능
+이미지 로드 bw bh 안맞아도 로드 되게
 라이브러리 화
 
 ok 홀그리기 테스트
@@ -23,3 +25,12 @@ ok 홀버퍼 native에 생성하고 native gdi로 그릴것
 6. 디스플레이시
   디스플레이 영역 이미지 좌표로 변환
   트리를 순회 하면서 이미지 영역에 포함되는지
+
+QuadTree
+- 정사각형으로 잡을것
+- 범위에 포함되지 않는 Child노드는 Null 처리
+- 노드에 홀 넣을때 Mid보다 작은것 else 로 구분
+- Display 할때도 마찬가지
+- 1/16보다 작아지면 LOD 시작
+- LOD는 모든 노드마다 대표노드를 달아둠, 그걸 표시
+- 마우스 포인터 Move시에 홀상세정보 표시 쿼드 트리 사용, 홀이 써클로 보일때만
