--- a/todo.txt
+++ b/todo.txt
@@ -17,20 +17,20 @@ ok 홀버퍼 native에 생성하고 native gdi로 그릴것
   -> 그래서 테스트 해보고 코드 삭제
 
 홀버퍼 쿼드트리 자료구조 화
-1. minxy maxxy를 구함
-2. 트리 깊이 설정
-3. 트리 생성
-4. 트리생성시 Data에는 RectangleF, List<Hole> 포함
-5. 홀 배열 순회하면서 트리 리프 노드에 추가
-6. 디스플레이시
-  디스플레이 영역 이미지 좌표로 변환
-  트리를 순회 하면서 이미지 영역에 포함되는지
+ok 1. minxy maxxy를 구함
+ok 2. 트리 깊이 설정
+ok 3. 트리 생성
+ok 4. 트리생성시 Data에는 RectangleF, List<Hole> 포함
+ok 5. 홀 배열 순회하면서 트리 리프 노드에 추가
+ok 6. 디스플레이시
+ok  디스플레이 영역 이미지 좌표로 변환
+ok  트리를 순회 하면서 이미지 영역에 포함되는지
 
 QuadTree
-- 정사각형으로 잡을것
-- 범위에 포함되지 않는 Child노드는 Null 처리
-- 노드에 홀 넣을때 Mid보다 작은것 else 로 구분
-- Display 할때도 마찬가지
-- 1/16보다 작아지면 LOD 시작
-- LOD는 모든 노드마다 대표노드를 달아둠, 그걸 표시
-- 마우스 포인터 Move시에 홀상세정보 표시 쿼드 트리 사용, 홀이 써클로 보일때만
+ok - 정사각형으로 잡을것
+ok - 범위에 포함되지 않는 Child노드는 Null 처리
+ok - 노드에 홀 넣을때 Mid보다 작은것 else 로 구분
+ok - Display 할때도 마찬가지
+ok - 1/16보다 작아지면 LOD 시작
+ok - LOD는 모든 노드마다 대표노드를 달아둠, 그걸 표시
+ - 마우스 포인터 Move시에 홀상세정보 표시 쿼드 트리 사용, 홀이 써클로 보일때만
