소스 조금 정리, todo 수정

--- a/todo.txt
+++ b/todo.txt
@@ -11,8 +11,6 @@ ok CopyImageBufferZoom Dst범위 계산해서 범위만 루프 돌것
 ok 이미지 로드 bw bh 안맞아도 로드 되게
 ok 전체 서페이스 (모든 포워드) 이미지 로딩 기능
 
-라이브러리 화
-
 ok 홀그리기 테스트
 ok 홀버퍼 native에 생성하고 native gdi로 그릴것
   -> 해봤는데 성능향상이 미미함
@@ -36,3 +34,15 @@ ok - Display 할때도 마찬가지
 ok - 1/16보다 작아지면 LOD 시작
 ok - LOD는 모든 노드마다 대표노드를 달아둠, 그걸 표시
 ok - 마우스 포인터 Move시에 홀상세정보 표시 쿼드 트리 사용, 홀이 써클로 보일때만
+
+라이브러리 화
+  - 주요기능
+    - 더블 버퍼링 처리
+    - 거대 이미지 버퍼 확대 / 축소
+    - 마우스 wheel시 zoom / 마우스 click+move시 panning
+    - 일정 배율 이상(>15) 확대시 이미지 개별픽셀값 표시
+    - 마우스 move시에 픽쳐박스 좌상단에 이미지 줌배율, 커서픽셀좌표, 커서픽셀값 표시 ( Zoom=3/4 (113,225)=256)
+    - 멀티 쓰레드 처리
+  - 기타 기능
+    - 중심선 표시
+    - 개별 픽셀값 표시할때 배율에 따라 폰트 크기 변경
