--- a/todo.txt
+++ b/todo.txt
@@ -46,3 +46,11 @@ ok - 마우스 포인터 Move시에 홀상세정보 표시 쿼드 트리 사용, 홀이 써클로 보일때만
   - 기타 기능
     - 중심선 표시
     - 개별 픽셀값 표시할때 배율에 따라 폰트 크기 변경
+  - 방법
+    - PictureBox를 상속해서 만든다
+    - dispBW, dispBH, dispBuf, dispBmp : PictureBox 크기변경시 갱신됨
+    - imgBW, imgBH, imgBuf
+    - Point ptPanning, const floot[] zoomFactors, const string[] zoomTexts, int zoomLevel, float ZoomFactor{get;}
+    - SetImgBuf(IntPtr imgBuf, int BW, int BH);
+    - RedrawImage : imgBuf -> dispBuf 디스프버퍼 생성시, 이미지 버퍼 생성시, 삭제시, 이미지 로드시, 줌시, Panning시, Layout변경시, 
+    - Paint시에 DrawImage(g, dispBuf), Draw PixelValue, Draw PixelInfo, Draw CrossLine 한 후 User Draw
