--- a/todo.txt
+++ b/todo.txt
@@ -55,11 +55,17 @@ ok    - SetImgBuf(IntPtr imgBuf, int BW, int BH);
 ok    - RedrawImage : imgBuf -> dispBuf 디스프버퍼 생성시, 이미지 버퍼 생성시, 삭제시, 이미지 로드시, 줌시, Panning시, Layout변경시, 
 ok    - Paint시에 DrawImage(g, dispBuf), Draw PixelValue, Draw PixelInfo, Draw CrossLine 한 후 User Draw
 
-Load/Save C#코드로 처리
-Native.DLL 프로젝트 삭제
+ok CopyImageBufferZoom() 함수 속도 개선
+ok   - dispBmp 무조건 PixelFormat.Format32bppPArgb 로 하도록 변경
+ok   - DrawImageUnscaledAndClipped() 함수 사용
 
-CopyImageBufferZoom() 함수 속도 개선
-  - OnPaint 이벤트의 더블 버퍼링 기본적으로 vid_sync 사용하여 60fps 미만은 30fps로 강제됨
-  - imgbuf -> dispbuf 로직 수정 : 버퍼 인덱스 처리 방식이 아닌 ptr++ 연산 사용
-DrawPixelValues() 함수 속도 개선
-  - GDI ExTextOut 사용
+ing DrawPixelValues() 함수 속도 개선
+  - GDI ExTextOut 사용 -> 속도 향상 없슴
+
+ing Load/Save C#코드로 처리
+  - C#에 BITMAPFILEHEADER, BITMAPINFOHEADER 구조체 만들어서 사용
+
+Native.Dll 은 만들어 놓긴 하되 사용 하지 않음
+  - Load*bitBmp()
+  - Save8BitBmp()
+  - CopyImageBufferZoom()
